# rs-symposium-booklet

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_TODO.md
examples/: 01_verify_excel_parsing.rs  02_render_pdf.rs
spec/: 01-overview.md  02-inputs-data-model.md  03-output-layout.md  04-typst-localization.md  05-cli-ux.md  06-validation-error-handling.md  07-implementation-plan.md  08-parsing.md  08-todo-next-steps.md  README.md
spec/design-guide/: README.md  RegionH_designguide_2025.txt  tokens.md
src/: cli.rs  lib.rs  log.rs  main.rs  model.rs  typst.rs  validation.rs
src/io/: excel.rs  markdown.rs  mod.rs  plan.rs
templates/starter/: book.typ
templates/starter/fonts/: README.md  SourceSans3-README.txt  SourceSerif4-README.txt
templates/starter/locales/: da.toml  en.toml
tests/: dry_run_and_locale.rs  typst_generation.rs  validation_tests.rs
tests/common/: mod.rs
tests/fixtures/: generate_fixture.rs
