[package]
name = "symposium-booklet"
version = "0.1.0"
edition = "2021"
authors = ["OpenCode <opencode@example.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
calamine = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
slug = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
regex = "1"

[dev-dependencies]
tempfile = "3.3"
